--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.0.1
+  flutter_spinkit: ^5.1.0
   get_it: ^7.2.0
   google_fonts: ^2.3.1
 
