--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animated_splash_screen: ^1.2.0
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
   equatable: ^2.0.3
@@ -36,6 +37,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   get_it: ^7.2.0
   google_fonts: ^2.3.1
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_lints: ^1.0.0
